Added cors and hostname

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brick-fighter",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
